Various QoL improvements

--- a/tmux.conf
+++ b/tmux.conf
@@ -78,8 +78,8 @@ set -g status-justify centre
 
 #                           
 #                           
-set -g status-left "#[bg=colour1]hi#[fg=colour1,bg=colour2]#[fg=colour16,bg=colour2] #(free -h|head -n2|tail -n1|awk '{printf\"%3.1f-%3.1f=%3.1f\",$2,$3,$4}')#[fg=colour2,bg=colour3] #[fg=colour16,bg=colour3]#S:#I.#P#[default]#[fg=colour3,bg=colour7]"
-set -g status-right "#[fg=colour3,bg=colour7]#[fg=colour16,bg=colour3]#(echo $USER')#[fg=colour1]@#[fg=colour5]#H #[fg=colour2,bg=colour3]#[fg=colour16,bg=colour2]#(uptime -p | awk '{print $2\" \"$3}'|sed 's/,//g') #[fg=colour1,bg=colour2]#[fg=colour16,bg=colour1]#(~/dex/bin/getCost.sh)"
+set -g status-left "#[bg=colour1]#(~/dex/bin/getKProcs.sh)#[fg=colour1,bg=colour2]#[fg=colour16,bg=colour2] #(free -h|head -n2|tail -n1|awk '{printf\"%3.1f-%3.1f=%3.1f\",$2,$3,$4}')#[fg=colour2,bg=colour3] #[fg=colour16,bg=colour3]#S:#I.#P#[default]#[fg=colour3,bg=colour7]"
+set -g status-right "#[fg=colour3,bg=colour7]#[fg=colour16,bg=colour3]#(echo $USER')#[fg=colour1]@#[fg=colour5]#H #[fg=colour2,bg=colour3]#[fg=colour16,bg=colour2]#(uptime -p | awk '{print $2\" \"$3}'|sed 's/,//g') #[fg=colour1,bg=colour2]#[fg=colour16,bg=colour1]>><<"
 
 # Some pane stuff
 set -g display-panes-time 800
