Change default window rotation keys to C-o,p.  It's more ergonomic and plays more nicely with iTerm.

--- a/tmux.conf
+++ b/tmux.conf
@@ -33,8 +33,8 @@ bind -n C-S-Right select-pane -R
 unbind n
 bind = next-window
 bind - previous-window
-bind -n C-Right next-window
-bind -n C-Left  previous-window
+bind -n C-p     next-window
+bind -n C-o     previous-window
 bind r command-prompt -p "Window Title:" "rename-window '%%'"
 
 # Some key-binding changes
@@ -78,7 +78,7 @@ set -g status-justify centre
 
 #                           
 #                           
-set -g status-left "#[bg=colour1]#(~/dex/bin/getKProcs.sh)#[fg=colour1,bg=colour2]#[fg=colour16,bg=colour2] #(free -h|head -n2|tail -n1|awk '{printf\"%3.1f-%3.1f=%3.1f\",$2,$3,$4}')#[fg=colour2,bg=colour3] #[fg=colour16,bg=colour3]#S:#I.#P#[default]#[fg=colour3,bg=colour7]"
+set -g status-left "#[bg=colour1]#<<>>#[fg=colour1,bg=colour2]#[fg=colour16,bg=colour2] #(free -h|head -n2|tail -n1|awk '{printf\"%3.1f-%3.1f=%3.1f\",$2,$3,$4}')#[fg=colour2,bg=colour3] #[fg=colour16,bg=colour3]#S:#I.#P#[default]#[fg=colour3,bg=colour7]"
 set -g status-right "#[fg=colour3,bg=colour7]#[fg=colour16,bg=colour3]#(echo $USER')#[fg=colour1]@#[fg=colour5]#H #[fg=colour2,bg=colour3]#[fg=colour16,bg=colour2]#(uptime -p | awk '{print $2\" \"$3}'|sed 's/,//g') #[fg=colour1,bg=colour2]#[fg=colour16,bg=colour1]>><<"
 
 # Some pane stuff
@@ -89,12 +89,12 @@ set -g display-panes-time 800
 # default window title colors
 #set-window-option -g window-status-fg "#657b83"
 #set-window-option -g window-status-bg "#eee8d5"
-set-window-option -g window-status-attr dim
+#set-window-option -g window-status-attr dim
 
 # active window title colors
 #set-window-option -g window-status-current-fg "#073642"
 #set-window-option -g window-status-current-bg "#eee8d5"
-set-window-option -g window-status-current-attr default 
+#set-window-option -g window-status-current-attr default 
 
 # pane border
 #set-option -g pane-border-fg white #base2
