--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vim/pack/plugins/start/rust.vim"]
 	path = vim/pack/plugins/start/rust.vim
 	url = https://github.com/rust-lang/rust.vim
+[submodule "vim/pack/plugins/start/diffconflicts"]
+	path = vim/pack/plugins/start/diffconflicts
+	url = https://github.com/whiteinge/diffconflicts.git
