--- a/tmux.conf
+++ b/tmux.conf
@@ -87,29 +87,27 @@ set -g display-panes-time 800
 #### COLOR (Solarized light)
 
 # default window title colors
-#set-window-option -g window-status-fg "#657b83"
-#set-window-option -g window-status-bg "#eee8d5"
-#set-window-option -g window-status-attr dim
+set-window-option -g window-status-style "fg=#657b83,bg=#eee8d5,dim"
 
 # active window title colors
-#set-window-option -g window-status-current-fg "#073642"
-#set-window-option -g window-status-current-bg "#eee8d5"
-#set-window-option -g window-status-current-attr default 
+set-window-option -g window-status-activity-style "fg=#073642,bg=#eee8d5,dim"
 
 # pane border
-#set-option -g pane-border-fg white #base2
-#set-option -g pane-active-border-fg brightcyan #base1
+set-option -g pane-border-style "fg=white"
+set-option -g pane-active-border-style "fg=cyan"
 
 # message text
-#set-option -g message-bg white #base2
-#set-option -g message-fg brightred #orange
+set-option -g message-style "fg=brightred,bg=white"
 
 # pane number display
-#set-option -g display-panes-active-colour blue #blue
-#set-option -g display-panes-colour brightred #orange
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
 
 # clock
-#set-window-option -g clock-mode-colour green #green
+set-window-option -g clock-mode-colour green #green
 
 # bell
 #set-window-option -g window-status-bell-style fg=white,bg=red #base2, red
+
+### OTHER
+set-option -g set-clipboard off
