--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,7 @@ set  -s escape-time 10
 set -sg repeat-time 100
 set  -s focus-events on
 set  -q -g status-utf8 on
+set-option -g default-shell /bin/bash
 
 # Splitting
 unbind %
