--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,7 @@ set -g prefix C-a                                         #to Ctrl+A, like GNU s
 bind C-a send-prefix
 
 # General settings
-set  -g default-terminal "tmux-256color"
+set  -g default-terminal "screen-256color"
 setw -g xterm-keys on
 set -ga terminal-overrides ',xterm*:smglr=\E7\E[?69h\E[%i%p1%d;%p2%ds\E8:mgc=\E7\E[?69l\E8'
 set  -s escape-time 10
